<resources>
    <string name="app_name">KillBill</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_mine">Mine</string>

    <string name="activity_recycler_view" translatable="false">RecyclerViewActivity</string>
    <string name="activity_touch" translatable="false">TouchActivity</string>
    <string name="activity_nested_list" translatable="false">NestedListActivity</string>
    <string name="activity_upload" translatable="false">UploadActivity</string>
    <string name="activity_webp" translatable="false">WebpActivity</string>
    <string name="activity_glide" translatable="false">GlideActivity</string>
    <string name="activity_relative_layout" translatable="false">LayoutOptimizationActivity</string>
    <string name="volley_activity" translatable="false">VolleyActivity</string>
    <string name="activity_rong_demo" translatable="false">RongDemoActivity</string>
    <string name="activity_exception" translatable="false">ExceptionActivity</string>
    <string name="activity_serializable" translatable="false">SerializableActivity</string>
    <string name="activity_drag" translatable="false">DragActivity</string>
    <string name="activity_region" translatable="false">RegionActivity</string>

    <string name="activity_standard" translatable="false">StandardActivity</string>
    <string name="activity_single_top" translatable="false">SingleTopActivity</string>
    <string name="activity_single_task" translatable="false">SingleTaskActivity</string>
    <string name="activity_single_instance" translatable="false">SingleInstanceActivity</string>
    <string name="activity_kotlin_practice" translatable="false">KotlinPracticeActivity</string>

    <string name="activity_blank" translatable="false">BlankActivity</string>
    <string name="activity_platform" translatable="false">PlatformActivity</string>
    <string name="activity_live_camera" translatable="false">LiveCameraActivity</string>
    <string name="activity_audio_record" translatable="false">AudioRecordActivity</string>
    <string name="activity_video_view" translatable="false">VideoViewActivity</string>
    <string name="activity_gl" translatable="false">GLActivity</string>
    <string name="activity_camera_3d" translatable="false">Camera3DActivity</string>
    <string name="activity_dice" translatable="false">DiceActivity</string>
    <string name="activity_compose" translatable="false">ComposeDemoActivity</string>
    <string name="activity_flutter_fragment" translatable="false">FlutterFragmentActivity</string>

    <string name="activity_login" translatable="false">LoginActivity</string>
    <string name="activity_codec" translatable="false">CodecActivity</string>
    <string name="activity_job_scheduler" translatable="false">JobSchedulerActivity</string>

    <string name="tv_1" translatable="false">举头望明月，低头思故乡。</string>
    <string name="tv_2" translatable="false">举头望明月，低头思故乡。\n举头望明月，低头思故乡。</string>
    <string name="tv_3" translatable="false">举头望明月，低头思故乡。\n举头望明月，低头思故乡。\n举头望明月，低头思故乡。</string>
    
    <string name="mine_btn_login" translatable="false">test Login</string>
    <string name="mine_btn_codec" translatable="false">test codec</string>
    <string name="mine_btn_job_scheduler" translatable="false">test JobScheduler</string>

    <string name="schedule" translatable="false">schedule</string>
    <string name="cancel" translatable="false">cancel</string>

    <string name="test_surfaceview" translatable="false">test SurfaceView</string>
    <string name="test_customview" translatable="false">test CustomView</string>
    <string name="test_textureview" translatable="false">test TextureView</string>
    <string name="test_mediarecorder" translatable="false">test MediaRecorder</string>
    <string name="test_videoview" translatable="false">test VideoView</string>
    <string name="test_glsurfaceview" translatable="false">test GLSurfaceView</string>
    <string name="test_camera3d" translatable="false">test Camera3D</string>
    <string name="test_dice_royale" translatable="false" formatted="true">test Dice Royale</string>
    <string name="test_compose" translatable="false" formatted="true">test Compose</string>
    <string name="test_flutter" translatable="false" formatted="true">test FlutterActivity</string>
    <string name="test_flutter_fragment" translatable="false" formatted="true">test FlutterFragment</string>

    <string name="test_upload" translatable="false">test upload</string>
    <string name="start_foreground" translatable="false">startForeground</string>
    <string name="run_task" translatable="false">runTask</string>
    <string name="stop_service" translatable="false">stopService</string>

    <string name="welcome_to_newyork" translatable="false">Welcome to New York!</string>
    <string name="start_bomb" translatable="false">Start Bomb</string>
    <string name="no_ad" translatable="false">Video\'s not ready.\nPlease try again later.</string>
    <string name="download" translatable="false">Download</string>
    <string name="show_dialog" translatable="false">Show Dialog</string>
</resources>
