<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="true"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.bride.ui_lib.widget.CustomTextView
        android:id="@+id/tv_11"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:maxLines="5"
        android:ellipsize="end"
        android:text="@string/tv_1"
        android:layout_alignParentLeft="true"/>

    <com.bride.ui_lib.widget.CustomTextView
        android:id="@+id/tv_22"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:maxLines="5"
        android:ellipsize="end"
        android:text="@string/tv_3"
        android:layout_alignParentRight="true"/>

    <com.bride.ui_lib.widget.CustomTextView
        android:id="@+id/tv_33"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:maxLines="5"
        android:ellipsize="end"
        android:text="@string/tv_2"
        android:layout_centerInParent="true"/>
</RelativeLayout>