<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="true"
    tools:context=".activity.UploadActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_upload"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/test_upload"/>

    <TextView
        android:id="@+id/tv_start_foreground"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_upload"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/start_foreground"/>

    <TextView
        android:id="@+id/tv_run_task"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_start_foreground"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/run_task"/>

    <TextView
        android:id="@+id/tv_stop"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_run_task"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/stop_service"/>
</androidx.constraintlayout.widget.ConstraintLayout>