<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="onClick"
        android:gravity="center"
        android:text="@string/mine_btn_login"/>

    <TextView
        android:id="@+id/btn_codec"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:onClick="onClick"
        android:gravity="center"
        android:text="@string/mine_btn_codec"/>

    <TextView
        android:id="@+id/btn_job_scheduler"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_codec"
        android:onClick="onClick"
        android:gravity="center"
        android:text="@string/mine_btn_job_scheduler"/>
</androidx.constraintlayout.widget.ConstraintLayout>